# mutual-fund-manager

./: .env.example  README.md  pyproject.toml
app/: main.py
app/db/: session.py
app/models/: fund.py  portfolio.py  user.py
app/routes/: auth.py  funds.py  portfolio.py
app/schemas/: portfolio.py
app/services/: portfolio_service.py  rapidapi_client.py  scheduler.py
tests/: conftest.py  test_auth.py  test_fund.py  test_fund_endpoints.py  test_portfolio.py  test_portfolio_endpoints.py
